# hexapodControl

continuousControl/: CMakeLists.txt  continuousControl.cpp  hexapod.cpp  hexapod.h
continuousControl/arduinoCode/continuousControl/: continuousControl.ino
continuousControl/arduinoCode/testing/: testing.ino
modules/custom/arduinoConnection/: arduinoController.cpp  arduinoController.h
modules/custom/raisimSimulatorFull/: raisimSimulator.cpp
multiLegControl/: CMakeLists.txt  hexapod.cpp  hexapod.h  multiLegControl.cpp
multiLegControl/arduinoCode/multiLegArduino/: multiLegArduino.ino
singleLegControl/: CMakeLists.txt  hexapodLeg.cpp  hexapodLeg.h  singleLegControl.cpp
